# Custom-Format

./: CMakeLists.txt  build.sh
assets/: test.jjj
include/: key.hpp  parser.hpp  token.hpp
src/: key.cpp  main.cpp  parser.cpp  token.cpp
